--- a/python/flask_web/templates/login.html
+++ b/python/flask_web/templates/login.html
@@ -38,5 +38,8 @@
             <input type="password" name="input_pass"><br>
             <input type="submit">
         </form>
+        <!-- 하이퍼링크 -->
+        <!-- get 방식으로 요청을 보낸다. -->
+        <a href="/signup">signup 페이지로 이동</a>
     </body>
 </html>
