--- a/python/flask_web/templates/main.html
+++ b/python/flask_web/templates/main.html
@@ -4,10 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
+    <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
+    <script>
+        function view(no){
+            location.href = '/read?No=' + no
+        }
+    </script>
 </head>
 <body>
     <!-- 로그인 성공 시 나타나는 화면-->
     <h1>main Page</h1>
-    <p>{{_name}} . 안녕하세요</p>
+    <!-- 글쓰기 버튼을 생성 -->
+    <!-- <button type="button" class="btn btn-danger">글쓰기</button> -->
+
+    <a href="/write" class="btn btn-primary">글쓰기</a>
+    <div class="container">
+        <!-- 게시글의 리스트를 table에 표시 -->
+        <table class="table table-dark">
+            <!-- 행을 추가 -->
+            <tr>
+                <!-- 열을 추가 -->
+                <th>No</th>
+                <th>제목</th>
+                <th>작성자</th>
+                <th>작성시간</th>
+            </tr>
+            <!-- app.py에서 _data 변수의 이름으로 데이터를 제공 -->
+            <!-- _data의 형태는 
+                [{'No' : xx, 
+                'title' : xxx, 
+                'writer' : xxxx,
+                'create_dt' : xxxxx
+                }, ....]-->
+            <!-- 반복문을 실행 -->
+            {% for i in range(0,_cnt,1) %}        
+                <tr onclick="view({{_data[i]['No']}})">
+                    <td>{{_data[i]['No']}}</td>
+                    <td>{{_data[i]['title']}}</td>
+                    <td>{{_data[i]['writer']}}</td>
+                    <td>{{_data[i]['create_dt']}}</td>
+                </tr>
+            {% endfor %}
+            <!-- 반복문 종료 -->
+        </table>
+    </div>
 </body>
 </html>
